--- a/bank.html
+++ b/bank.html
@@ -3,87 +3,169 @@
 <head>
   <meta charset="UTF-8">
   <title>Cybucks Banking System</title>
-  <style>
+<style>
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
+/* -------- GLOBAL -------- */
+
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, sans-serif;
-  background: radial-gradient(circle at top, #1f2937 0, #020617 45%, #000 100%);
+  background: radial-gradient(circle at top, #020617 0, #020617 40%, #000 100%);
   color: #f9fafb;
   min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 20px;
+  position: relative;
+  overflow: hidden;
 }
 
-/* Card */
+/* soft animated glow in background */
+body::before {
+  content: "";
+  position: fixed;
+  width: 520px;
+  height: 520px;
+  background: radial-gradient(circle, rgba(34, 197, 94, 0.12), transparent 70%);
+  top: -120px;
+  right: -80px;
+  filter: blur(2px);
+  opacity: 0.9;
+  pointer-events: none;
+  z-index: -1;
+}
+
+/* -------- CARD -------- */
+
 .container {
   width: 100%;
   max-width: 480px;
-  background: rgba(15, 23, 42, 0.96);
-  padding: 28px 24px 24px;
-  border-radius: 16px;
+  background: radial-gradient(circle at top left, #020617 0, #020617 55%, #030712 100%);
+  padding: 26px 24px 22px;
+  border-radius: 18px;
+  position: relative;
   box-shadow:
-    0 18px 45px rgba(0, 0, 0, 0.8),
-    0 0 0 1px rgba(148, 163, 184, 0.12);
-  backdrop-filter: blur(12px);
-  border: 1px solid rgba(148, 163, 184, 0.35);
+    0 22px 55px rgba(0, 0, 0, 0.85),
+    0 0 0 1px rgba(148, 163, 184, 0.2);
+  backdrop-filter: blur(14px);
+  border: 1px solid rgba(148, 163, 184, 0.45);
 }
 
-/* Headings */
+/* subtle neon border glow */
+.container::before {
+  content: "";
+  position: absolute;
+  inset: -1px;
+  border-radius: inherit;
+  background: conic-gradient(from 140deg, rgba(34,197,94,0.4), rgba(59,130,246,0.25), rgba(34,197,94,0.4));
+  opacity: 0.22;
+  z-index: -1;
+}
+
+/* -------- HEADINGS -------- */
+
 h2, h3 {
   text-align: center;
   letter-spacing: 0.03em;
 }
 
 h2 {
-  font-size: 1.4rem;
+  font-size: 1.45rem;
   font-weight: 650;
   margin-bottom: 4px;
+}
+
+/* small neon pill under title */
+h2::after {
+  content: "CYBUCKS • BETA";
+  display: inline-block;
+  margin-top: 8px;
+  padding: 3px 9px;
+  font-size: 0.66rem;
+  font-weight: 600;
+  letter-spacing: 0.16em;
+  text-transform: uppercase;
+  color: #bbf7d0;
+  background: rgba(22, 163, 74, 0.12);
+  border-radius: 999px;
+  border: 1px solid rgba(34, 197, 94, 0.45);
 }
 
 h3 {
   font-size: 0.9rem;
   font-weight: 400;
   color: #9ca3af;
-  margin-bottom: 18px;
+  margin: 18px 0 12px;
+}
+
+/* -------- LAYOUT BLOCKS -------- */
+
+#loginBox,
+#bankBox {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 /* Labels */
+
 .label {
-  margin-top: 14px;
-  margin-bottom: 4px;
-  font-size: 0.85rem;
-  color: #d1d5db;
-  opacity: 0.95;
+  margin-top: 8px;
+  margin-bottom: 3px;
+  font-size: 0.84rem;
+  color: #e5e7eb;
+  opacity: 0.92;
 }
 
-/* Balance display */
+/* Balance */
+
 .balance {
-  font-size: 1.1rem;
-  margin-top: 2px;
-  margin-bottom: 14px;
+  font-size: 1.05rem;
+  margin-top: 4px;
+  margin-bottom: 6px;
   font-weight: 600;
   color: #e5e7eb;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.balance span {
+/* tiny tag for currency */
+.balance::after {
+  content: "CYB";
+  font-size: 0.65rem;
+  padding: 2px 7px;
+  border-radius: 999px;
+  border: 1px solid rgba(148, 163, 184, 0.55);
+  color: #9ca3af;
+  text-transform: uppercase;
+  letter-spacing: 0.12em;
+}
+
+.balance b {
+  font-weight: 700;
+}
+
+.balance span,
+#balance {
   color: #22c55e;
 }
 
-/* Inputs + select */
+/* -------- INPUTS & SELECT -------- */
+
 input,
 select {
   width: 100%;
   padding: 10px 11px;
-  border-radius: 8px;
+  border-radius: 9px;
   border: 1px solid rgba(55, 65, 81, 0.9);
-  background: radial-gradient(circle at top left, #111827, #020617 60%);
+  background: radial-gradient(circle at top left, #020617, #020617 55%, #030712 100%);
   color: #f9fafb;
   font-size: 0.9rem;
   outline: none;
@@ -94,6 +176,12 @@ select {
     transform 0.08s ease;
 }
 
+/* add subtle inner shadow to inputs */
+input,
+select {
+  box-shadow: inset 0 0 0 1px rgba(15, 23, 42, 0.9);
+}
+
 input::placeholder {
   color: #6b7280;
 }
@@ -101,11 +189,19 @@ input::placeholder {
 input:focus,
 select:focus {
   border-color: #22c55e;
-  box-shadow: 0 0 0 1px rgba(34, 197, 94, 0.7), 0 0 18px rgba(34, 197, 94, 0.35);
+  box-shadow:
+    0 0 0 1px rgba(34, 197, 94, 0.7),
+    0 0 18px rgba(34, 197, 94, 0.32);
   transform: translateY(-1px);
 }
 
-/* Buttons */
+/* spacing tweak for amount field */
+#amount {
+  margin-top: 2px;
+}
+
+/* -------- BUTTON -------- */
+
 button {
   width: 100%;
   padding: 11px 10px;
@@ -117,7 +213,7 @@ button {
   cursor: pointer;
   background: linear-gradient(135deg, #22c55e, #16a34a);
   color: #020617;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.12em;
   text-transform: uppercase;
   box-shadow:
     0 14px 30px rgba(22, 163, 74, 0.4),
@@ -130,7 +226,7 @@ button {
 }
 
 button:hover {
-  filter: brightness(1.05);
+  filter: brightness(1.06);
   transform: translateY(-1px);
   box-shadow:
     0 18px 40px rgba(22, 163, 74, 0.55),
@@ -152,24 +248,26 @@ button:disabled {
   filter: grayscale(0.2);
 }
 
-/* Tiny footer text */
+/* -------- FOOTER / TIP -------- */
+
 .small {
   font-size: 0.78rem;
-  opacity: 0.7;
+  opacity: 0.75;
   text-align: center;
-  margin-top: 16px;
+  margin-top: 14px;
   color: #9ca3af;
+  line-height: 1.4;
 }
 
-/* Optional: subtle divider between sections */
-.section-divider {
-  height: 1px;
-  background: radial-gradient(circle, rgba(75, 85, 99, 0.8), transparent 70%);
-  margin: 16px 0 10px;
-  border-radius: 999px;
-}
+/* -------- OPTIONAL RESPONSIVE TWEAKS -------- */
 
-  </style>
+@media (min-width: 540px) {
+  .container {
+    padding: 28px 28px 24px;
+  }
+}
+</style>
+
 </head>
 
 <body>
