--- a/bank.html
+++ b/bank.html
@@ -82,7 +82,7 @@ h2 {
 
 /* small neon pill under title */
 h2::after {
-  content: "CYBUCKS • BETA";
+  content: "CYBUCKS";
   display: inline-block;
   margin-top: 8px;
   padding: 3px 9px;
